--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -56,11 +56,21 @@
             </div>
             <%= render "work_experiences/show" %>
             <!-- simple form pour ajouter une work experience -->
+          <%= image_tag "Logo_3_OS.png", class: "form-image" %>
+          <div class="form-inputs">
             <%= simple_form_for(@work_experience) do |f| %>
+              <%= f.input :poste_intitulé, label: "Intitulé du poste" %>
               <%= f.input :entreprise %>
-              <%= f.button :submit %>
-            <% end %>
+              <%= f.input :lieux, label: "Lieu" %>
+              <%= f.input :start_date, label: "Date de début" %>
+              <%= f.input :end_date, label: "Date de fin" %>
+              <%= f.input :photo %>
+          </div>
+          <div class="form-actions">
+            <%= f.button :submit, "Ajouter mon experience" %>
+          </div>
 
+            <% end %>
           </div>
         <% end %>
       </div>
