--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -22,16 +22,16 @@
               <p><i class="fas fa-flag"></i> <%= @user.nationality %></p>
               <p><i class="fas fa-birthday-cake"></i> <%= @user.age %> ans</p>
               <p><i class="fas fa-map-marker-alt"></i><%= @user.address %></p>
-              <%= simple_form_for @user do |f| %>
+              <%= simple_form_for @user, url: profil_path, method: :patch do |f| %>
                 <!-- [...] -->
                 <%= f.input :cv %>
                 <%= f.input :cv_cache, as: :hidden %>
-                <%= f.button :submit %>
+                <%= f.button :submit, class: "btn btn-flat" %>
                 <!-- [...] -->
               <% end %>
               <div class="profil-btns d-flex justify-content-around">
               <button type="button" class="button">Éditer</button>
-              <button type="button" class="btn btn-outline-secondary">Supprimer</button>
+              <button type="button" class="button">Supprimer</button>
               </div>
             </div>
           </div>
@@ -58,32 +58,34 @@
             </div>
           </div>
 
-
-          <div class="my-experiences">
-            <h3><i class="fas fa-user-tie"></i>   Expériences professionnelles</h3>
-            <p>Dernière expérience enregistrée</p>
-            <div class="alumnus-experience">
-              <div class="experience-img">
-                <%= image_tag @user.work_experiences.last.photo %>
+          <% unless @user.work_experiences.blank? %>
+            <div class="my-experiences">
+              <h3><i class="fas fa-user-tie"></i>   Expériences professionnelles</h3>
+              <p>Dernière expérience enregistrée</p>
+              <div class="alumnus-experience">
+                <div class="experience-img">
+                  <%= image_tag @user.work_experiences.last.photo %>
+                </div>
+                <div class="experience-details">
+                  <p class="experience-title"><%= @user.work_experiences.last.poste_intitulé %></p>
+                  <p class="experience-corp-name"><%= @user.work_experiences.last.entreprise %>, <%= @user.work_experiences.last.durée %> mois</p>
+                  <p class="experience-dates"><%= @user.work_experiences.last.description %></p>
+                </div>
               </div>
-              <div class="experience-details">
-                <p class="experience-title"><%= @user.work_experiences.last.poste_intitulé %></p>
-                <p class="experience-corp-name"><%= @user.work_experiences.last.entreprise %>, <%= @user.work_experiences.last.durée %> mois</p>
-                <p class="experience-dates"><%= @user.work_experiences.last.description %></p>
-              </div>
-            </div>
-            <button id="button-toogle-work-experiences" class="btn btn-flat deroulable d-flex justify-content-center mt-3">
-              Voir toutes les expériences de <%= @user.first_name %>
-            </button>
-            <%= render "work_experiences/show" %>
-            </div>
+              <button id="button-toogle-work-experiences" class="btn btn-flat deroulable d-flex justify-content-center mt-3">
+                Voir toutes les expériences de <%= @user.first_name %>
+              </button>
 
-            <!-- simple form pour ajouter une work experience -->
-            <%= simple_form_for(@work_experience) do |f| %>
-              <%= f.input :entreprise %>
-              <%= f.button :submit %>
-            <% end %>
-          </div>
+              <%= render "work_experiences/show" %>
+
+              <!-- simple form pour ajouter une work experience -->
+              <%= simple_form_for(@work_experience) do |f| %>
+                <%= f.input :entreprise %>
+                <%= f.button :submit %>
+              <% end %>
+            </div>
+          <% end %>
+
         <% end %>
       </div>
 
